--- a/assets/css/wxc.css
+++ b/assets/css/wxc.css
@@ -97,7 +97,8 @@ button.icon-button img,
 /* General/Override styles */
 
 .hidden,
-.print-only {
+.print-only,
+.print-header {
     display: none;
 }
 
